[project]
name = "whiteintel-mcp"
version = "0.1.0"
description = "WhiteIntel-MCP FastMCP server for credential exposure, threat feed, watchlist, and supplier intelligence APIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "helGayhub233" }
]
keywords = ["mcp", "whiteintel", "threat-intelligence", "credential-leaks", "osint", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.28.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/helGayhub233/WhiteIntel-MCP"
Repository = "https://github.com/helGayhub233/WhiteIntel-MCP"
Issues = "https://github.com/helGayhub233/WhiteIntel-MCP/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
whiteintel-mcp = "whiteintel_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whiteintel_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "whiteintel_mcp/docs"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/.env.example",
    "/mcp.json.example",
    "/docs",
    "/src",
]
exclude = [
    "/.gitignore",
    "/.python-version",
    "/uv.lock",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
